<resources>

    <!-- SHARED -->
    <string name="app_name">Genbrug</string>
    <string name="action_settings">Settings</string>

    <!-- GENBRUG ITEM
    KEY: gitem -->
    <string name="gitem_headline">Headline</string>
    <string name="gitem_description">Description</string>
    <string name="title_activity_give">GiveActivity</string>

    <string name="giveform_headline">Headline</string>
    <string name="giveform_description">Description</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>

    <string name="app_id">759727107481424</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="giveform_address">Address</string>
    <string name="giveform_zipcode">Zip Code</string>
    <string name="giveform_city">City</string>
    <string name="giveform_country">Country</string>
    <string name="giveform_radio_home">Home</string>
    <string name="giveform_radio_street">Street</string>
    <string name="title_activity_take_item">TakeItem</string>
    <string name="title_activity_takers">TakersActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="submit">Submit</string>
    <string name="options">Options</string>
    <string name="give">Give</string>
    <string name="details">Details</string>
</resources>
