<com.iha.genbrug.give.InterceptScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intercept_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.iha.genbrug.give.GiveActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/rel_image_wrapper">

            <com.iha.genbrug.give.TouchImageView
                android:id="@+id/iv_chosen_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#d8d8d8"
                android:scaleType="centerCrop" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cam_pic"
                android:src="@drawable/ic_action_camera"
                android:background="@drawable/circle_brown"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="90dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_browse_pic"
                android:src="@drawable/ic_action_picture"
                android:background="@drawable/circle_brown"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="90dp" />

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:visibility="gone"
                android:id="@+id/btn_crop_image"
                android:background="@drawable/crop_btn"
                android:text="Crop"
                android:textColor="#B3FFFFFF"
                android:typeface="sans"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="25dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel_pic"
                android:visibility="gone"
                android:src="@drawable/ic_action_cancel"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@null"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_rotate_pic"
                android:visibility="gone"
                android:src="@drawable/ic_action_turn_right"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@null"
                />

            <LinearLayout
                android:id="@+id/layout_crop_grid_vertical"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/crop_grid_horizontal"
                    android:clickable="false"
                    android:layout_margin="-1dp"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_crop_grid_horizontal"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/crop_grid_vertical"
                    android:clickable="false"
                    android:layout_margin="-1dp"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:background="@drawable/give_background"
            android:id="@+id/linFormWrapper"
            android:orientation="vertical"
            android:layout_below="@+id/rel_image_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <Spinner
                android:id="@+id/spinner_category"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:padding="5dp"
                />

            <EditText
                android:id="@+id/et_headline"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="5dp"
                android:hint="@string/giveform_headline"
                android:textColorHint="#000000"
                android:textColor="#000000"
                />

            <EditText
                android:id="@+id/et_description"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="5dp"
                android:inputType="textMultiLine"
                android:gravity="top"

                android:hint="@string/giveform_description"
                android:textColorHint="#000000"
                android:textColor="#000000"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pick_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ghost_button"
                    android:text="From"/>

                <Button
                    android:id="@+id/btn_pick_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ghost_button"
                    android:text="To"/>

            </LinearLayout>

            <Spinner  android:id="@+id/spinner_pickup_type"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/et_street"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="5dp"
                android:hint="@string/giveform_address"
                android:textColorHint="#000000"
                android:textColor="#000000"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_zipcode"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:hint="@string/giveform_zipcode"
                android:textColorHint="#000000"
                android:textColor="#000000"
                />

            <EditText
                android:id="@+id/et_city"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:hint="@string/giveform_city"
                android:textColorHint="#000000"
                android:textColor="#000000"
                />

        </LinearLayout>

            <EditText
                android:id="@+id/et_country"
                android:background="@drawable/form_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="5dp"
                android:hint="@string/giveform_country"
                android:textColorHint="#000000"
                android:textColor="#000000"
                />

            <Button
                android:id="@+id/btn_give"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:text="Give"
                android:background="@color/brown"/>

        </LinearLayout>

    </RelativeLayout>

</com.iha.genbrug.give.InterceptScrollView>